--- a/kooplexhub/hub/templates/container/list.html
+++ b/kooplexhub/hub/templates/container/list.html
@@ -1,5 +1,29 @@
 {% extends "layout.html" %}
 
+{% block header_extra %}
+<link rel="stylesheet" href="/static/fontawesome-free-5.10.2-web/css/all.css">
+
+<style>
+.card-header .btn-link {
+	color: #343a40;
+
+}
+.card-header .btn-link.collapsed:before {
+    content:"\f105";
+}
+.card-header .btn-link:before {
+   content:"\f107";
+    padding-right: 4px;
+}
+.card-header .btn:hover,
+.card-header .btn:focus  {
+    text-decoration:none;
+    border-color: darkgrey;
+}
+</style>
+{% endblock %}
+
+
 {% block submenu %}
 <div class="navbar navbar-expand-lg navbar-light bg-light">
   <h5><span class="badge badge-secondary">List of your service containers</span></h5>
