--- a/kooplexhub/hub/templates/container/partial.html
+++ b/kooplexhub/hub/templates/container/partial.html
@@ -3,7 +3,7 @@
     {% include 'container/startopen.html' %}
     {% comment %} fas btn-link collapsed
     {% endcomment %}
-    <button class="btn btn-outline-dark" data-toggle="collapse" data-target="#collapse-{{ container.id }}" aria-expanded="true" aria-controls="collapse-{{ container.id }}" style="min-width: 15em; text-align: left;">
+    <button class="btn btn-outline-dark fas btn-link collapsed" data-toggle="collapse" data-target="#collapse-{{ container.id }}" aria-expanded="true" aria-controls="collapse-{{ container.id }}" style="min-width: 15em; text-align: left;">
       <strong>{{ container.name }}</strong>
     </button>
     <div style="float:right">
@@ -20,54 +20,54 @@
     </div>
   </div>
 
-    <div id="collapse-{{ container.id }}" class="collapse" aria-labelledby="heading-{{ container.id }}" data-parent="#containerList">
-      <div class="card" style="margin: 10px">
-        <div class="card-header">Control: 
-          <div style="float: right;">
-            <span class="badge badge-pill badge-secondary">Last message:<strong>{{ container.last_message_at }}</strong></span>
-	    <a href="{% url 'service:refreshlogs' container.id %}" role="button" class="btn btn-primary" style="padding: 3px 6px 6px 6px; margin-right: 3px">
-              <span class="oi oi-reload" aria-hidden="true" data-toggle="tooltip" title="Refresh container information" data-placement="bottom"></span></a>
-            <a href="{% url 'service:destroy' container.id next_page %}" role="button" class="btn btn-danger" style="padding: 3px 6px 6px 6px; margin-right: 3px">
-              <span class="oi oi-fire" aria-hidden="true" data-toggle="tooltip" title="Remove {{ container.name }}"></span></a>
-            <a href="{% url 'service:configure' container.id %}" role="button" class="btn btn-secondary" style="padding: 3px 6px 6px 6px; margin-right: 3px">
-              <span class="oi oi-wrench" aria-hidden="true" data-toggle="tooltip" title="Add/remove project to the container" data-placement="bottom"></span></a>
-          </div>
+  <div id="collapse-{{ container.id }}" class="collapse" aria-labelledby="heading-{{ container.id }}" data-parent="#containerList">
+    <div class="card" style="margin: 10px">
+      <div class="card-header">Control: 
+        <div style="float: right;">
+          <span class="badge badge-pill badge-secondary">Last message:<strong>{{ container.last_message_at }}</strong></span>
+          <a href="{% url 'service:refreshlogs' container.id %}" role="button" class="btn btn-primary" style="padding: 3px 6px 6px 6px; margin-right: 3px">
+            <span class="oi oi-reload" aria-hidden="true" data-toggle="tooltip" title="Refresh container information" data-placement="bottom"></span></a>
+          <a href="{% url 'service:destroy' container.id next_page %}" role="button" class="btn btn-danger" style="padding: 3px 6px 6px 6px; margin-right: 3px">
+            <span class="oi oi-fire" aria-hidden="true" data-toggle="tooltip" title="Remove {{ container.name }}"></span></a>
+          <a href="{% url 'service:configure' container.id %}" role="button" class="btn btn-secondary" style="padding: 3px 6px 6px 6px; margin-right: 3px">
+            <span class="oi oi-wrench" aria-hidden="true" data-toggle="tooltip" title="Add/remove project to the container" data-placement="bottom"></span></a>
         </div>
-        <div class="card-body">
-          <div class="card-deck">
-            <div class="card">
-              {% if container.projects|length == 0 %}
-                <h5 class="card-title">No projects associated</h5>
-              {% else %}
-                <h5 class="card-title">Projects</h5>
-                {% for p in container.projects %}
-                  <p>{{ p }}</p>
-                {% endfor %}
-	      {% endif %}
-	    </div>
-            <div class="card">
-              {% if container.volumes|length == 0 %}
-                <h5 class="card-title">No volumes associated</h5>
-              {% else %}
-                <h5 class="card-title">Volumes</h5>
-                {% for v in container.volumes %}
-                  <p>{{ v }} ({{ v.description }})</p>
-                {% endfor %}
-              {% endif %}
-	    </div>
-            <div class="card">
-              {% if container.synced_libraries|length == 0 %}
-                <h5 class="card-title">No file synchron folders associated</h5>
-              {% else %}
-                <h5 class="card-title">Synchronized folders</h5>
-                {% for l in container.synced_libraries %}
-		  <p>{{ l.library_name }} from server {{ l.sync_server.url }}</p>
-                {% endfor %}
-              {% endif %}
-	    </div>
-	  </div>
+      </div>
+      <div class="card-body">
+        <div class="card-deck">
+          <div class="card">
+            {% if container.projects|length == 0 %}
+              <h5 class="card-title">No projects associated</h5>
+            {% else %}
+              <h5 class="card-title">Projects</h5>
+              {% for p in container.projects %}
+                <p>{{ p }}</p>
+              {% endfor %}
+            {% endif %}
+          </div>
+          <div class="card">
+            {% if container.volumes|length == 0 %}
+              <h5 class="card-title">No volumes associated</h5>
+            {% else %}
+              <h5 class="card-title">Volumes</h5>
+              {% for v in container.volumes %}
+                <p>{{ v }} ({{ v.description }})</p>
+              {% endfor %}
+            {% endif %}
+          </div>
+          <div class="card">
+            {% if container.synced_libraries|length == 0 %}
+              <h5 class="card-title">No file synchron folders associated</h5>
+            {% else %}
+              <h5 class="card-title">Synchronized folders</h5>
+              {% for l in container.synced_libraries %}
+      	  <p>{{ l.library_name }} from server {{ l.sync_server.url }}</p>
+              {% endfor %}
+            {% endif %}
+          </div>
         </div>
       </div>
     </div>
   </div>
+</div>
 
