--- a/kooplexhub/hub/templates/project/startopen.html
+++ b/kooplexhub/hub/templates/project/startopen.html
@@ -1,10 +1,10 @@
-{% if project.containers|length == 0 %}
+{% if services|length == 0 %}
   <a href="#" role="button" class="btn btn-warning" style="min-width: 6em; text-align: left;" data-toggle="tooltip" title="Missing environment"><span class="oi oi-x" aria-hidden="true"> Open</span></a>
-{% elif project.containers|length == 1 %}
-  {% include 'container/startopen.html' with container=project.containers|first %}
+{% elif services|length == 1 %}
+  {% include 'container/startopen.html' with container=services|first %}
 {% else %}
   <div class="btn-group">
-    {% with fc=project.containers|first %}
+    {% with fc=services|first %}
       {% if fc.state == fc.ST_RUNNING %}
     <button type="button" class="btn btn-success"><a href="{% url 'service:open' fc.id next_page %}" role="button" class="btn-success" target="_blank" data-toggle="tooltip" title="Access environment {{ fc.name }}"><span class="oi oi-external-link" aria-hidden="true"> Open</a></button>
       {% else %}
@@ -13,7 +13,7 @@
     {% endwith %}
     <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"></button>
     <div class="dropdown-menu">
-    {% for container in project.containers %}
+    {% for container in services %}
       {% if container.state == container.ST_RUNNING %}
       <a class="dropdown-item" href="{% url 'service:open' container.id next_page %}" target="_blank"><span class="oi oi-external-link" aria-hidden="true"> Open {{ container.name }}</span></a>
       {% else %}
