--- a/kooplexhub/hub/templates/project/stopremove.html
+++ b/kooplexhub/hub/templates/project/stopremove.html
@@ -1,12 +1,12 @@
-{% if project.containers|length == 0 %}
+{% if services|length == 0 %}
   <a href="#" role="button" class="btn btn-warning" style="padding: 3px 6px 6px 6px; float: right;" data-toggle="tooltip" title="Missing environment"><span class="oi oi-x" aria-hidden="true"></span></a>
-{% elif project.containers|length == 1 %}
-  {% include 'container/stopremove.html' with container=project.containers|first %}
+{% elif services|length == 1 %}
+  {% include 'container/stopremove.html' with container=services|first %}
 {% else %}
   <div class="btn-group" style="padding: 3px 6px 6px 6px; float: right;">
     <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"></button>
     <div class="dropdown-menu">
-    {% for container in project.containers %}
+    {% for container in services %}
       {% if container.state == container.ST_RUNNING %}
       <a class="dropdown-item" href="{% url 'service:stop' container.id next_page %}" class="btn btn-danger"><span class="oi oi-x" aria-hidden="true"> Stop {{ container.name }}</span></a>
       {% elif container.state == container.ST_ERROR %}
@@ -16,10 +16,10 @@
       {% endif %}
     {% endfor %}
     </div>
-    {% with fc=project.containers|first %}
+    {% with fc=services|first %}
       {% if fc.state == fc.ST_RUNNING %}
     <button type="button" class="btn btn-danger"><a href="{% url 'service:stop' fc.id next_page %}" role="button" class="btn-danger" data-toggle="tooltip" title="Stop environment {{ fc.name }}"><span class="oi oi-x" aria-hidden="true"></a></button>
-      {% elif fc.state == container.ST_ERROR %}
+      {% elif fc.state == fc.ST_ERROR %}
     <button type="button" class="btn btn-danger"><a href="{% url 'service:stop' fc.id next_page %}" role="button" class="btn-danger" data-toggle="tooltip" title="Cleanup resources of environment {{ fc.name }}"><span class="oi oi-x" aria-hidden="true"></a></button>
       {% else %}
     <button type="button" class="btn btn-outline-secondary"><a href="#"><span class="oi oi-link-broken" aria-hidden="true"></a></button>
