--- a/kooplexhub/hub/templates/container/list.html
+++ b/kooplexhub/hub/templates/container/list.html
@@ -25,9 +25,9 @@
 
 
 {% block submenu %}
-<div class="navbar navbar-expand-lg navbar-light bg-light">
-  <h5><span class="badge badge-secondary">List of your service containers</span></h5>
-</div>
+  {% with title="List of your service environments" submenu="list" %}
+    {% include 'container/service_submenu.html' %}
+  {% endwith %}
 {% endblock %}
 
 {% block main_content_center %}
