--- a/kooplexhub/hub/templates/project/list.html
+++ b/kooplexhub/hub/templates/project/list.html
@@ -1,10 +1,7 @@
 {% extends "layout.html" %}
 
 {% block header_extra %}
-
-<!--script src="https://kit.fontawesome.com/27d0a7c7d0.js"></script-->
 <link rel="stylesheet" href="/static/fontawesome-free-5.10.2-web/css/all.css">
-
 
 <style>
 .card-header .btn-link {
@@ -27,9 +24,9 @@
 {% endblock %}
 
 {% block submenu %}
-<div class="navbar navbar-expand-lg navbar-light bg-light">
-  <h5><span class="badge badge-secondary">The list of your projects</span></h5>
-</div>
+  {% with title="The list of your projects" submenu="list" %}
+    {% include 'project/project_submenu.html' %}
+  {% endwith %}
 {% endblock %}
 
 {% block main_content_left %}
