--- a/kooplexhub/hub/templates/project/manage.html
+++ b/kooplexhub/hub/templates/project/manage.html
@@ -2,9 +2,9 @@
 {% load render_table from django_tables2 %}
 
 {% block submenu %}
-<div class="navbar navbar-expand-lg navbar-light bg-light">
-  <h5><span class="badge badge-secondary">Show or hide your projects</span></h5>
-</div>
+  {% with title="Show or hide your projects" submenu="showhide" %}
+    {% include 'project/project_submenu.html' %}
+  {% endwith %}
 {% endblock %}
 
 {% block main_content_center %}
