--- a/kooplexhub/hub/templates/menuitem_project.html
+++ b/kooplexhub/hub/templates/menuitem_project.html
@@ -1,22 +1,44 @@
-  <li class="nav-item {{ active }}">
-    {% if user.profile.projectbindings %}
-      <a href="{% url 'project:list' %}" class="nav-link" data-toggle="tooltip" title="List and manage your projects" data-placement="bottom">Projects</a>
-    {% else %}
-      <a href="#" class="nav-link disabled" data-toggle="tooltip" title="You do not have a project yet" data-placement="bottom">Projects</a>
-    {% endif %}
-  </li>
+<style>
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+</style>
+
+
+<div class="dropdown">
+  <li class="nav-item {{ active }}">
+    <a href="{% url 'project:list' %}" class="nav-link" data-toggle="tooltip" title="List and manage your projects" data-placement="bottom">Projects</a>
+  </li>
+  <div class="dropdown-content" aria-labelledby="navbarDropdownProject">
+{% if user.profile.can_createproject %}
+      <a href="#" data-toggle="modal" data-target="#project-new">New project</a>
+{% endif %}
+      <a href="{% url 'project:join' %}">Join a project</a>
+      <a href="{% url 'project:list' %}">List projects</a>
+      <a href="{% url 'project:showhide' %}">Show/hide projects</a>
+  </div>
+</div>
 {% if user.profile.can_createproject %}
   {% include "project/new.html" %}
 {% endif %}
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProject" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
-    <div class="dropdown-menu" aria-labelledby="navbarDropdownProject">
-{% if user.profile.can_createproject %}
-      <a class="dropdown-item" href="#" data-toggle="modal" data-target="#project-new">New project</a>
-{% endif %}
-      <a class="dropdown-item" href="{% url 'project:join' %}">Join a project</a>
-      <a class="dropdown-item" href="{% url 'project:list' %}">List projects</a>
-      <a class="dropdown-item" href="{% url 'project:showhide' %}">Show/hide projects</a>
-    </div>
-  </li>
