--- a/kooplexhub/hub/templates/menuitem_report.html
+++ b/kooplexhub/hub/templates/menuitem_report.html
@@ -1,15 +1,37 @@
+<style>
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+</style>
+
+<div class="dropdown">
   <li class="nav-item {{ active }}">
-      <a href="{% url 'report:list'  %}" class="nav-link" data-toggle="tooltip" title="List and manage your reports" data-placement="bottom">Reports</a>
-      {% comment %}    {% if user.profile.reports %}
-    {% else %}
-      <a href="#" class="nav-link disabled" data-toggle="tooltip" title="You do not have a project yet" data-placement="bottom">Reports</a>
-    {% endif %}{% endcomment %}
+    <a href="{% url 'report:list'  %}" class="nav-link" data-toggle="tooltip" title="List and manage your reports" data-placement="bottom">Reports</a>
   </li>
 
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownReport" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
-    <div class="dropdown-menu" aria-labelledby="navbarDropdownReport">
-      <a class="dropdown-item" href="{% url 'report:new' %}">New report</a>
-      <a class="dropdown-item" href="{% url 'report:list' %}">List reports</a>
-    </div>
-  </li>
+  <div class="dropdown-content" aria-labelledby="navbarDropdownReport">
+    <a href="{% url 'report:new' %}">New report</a>
+    <a href="{% url 'report:list' %}">List reports</a>
+  </div>
+</div>
