--- a/kooplexhub/hub/templates/menuitem_services.html
+++ b/kooplexhub/hub/templates/menuitem_services.html
@@ -1,4 +1,37 @@
+<style>
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+</style>
+
+<div class="dropdown">
   <li class="nav-item {{ active }}">
-      <a href="{% url 'service_external:filesync' %}" class="nav-link" data-toggle="tooltip" title="Manage file synchronization and version control" data-placement="bottom">Services</a>
+    <a href="{% url 'service_external:filesync' %}" class="nav-link" data-toggle="tooltip" title="Manage file synchronization, version control and storage area" data-placement="bottom">Resources</a>
   </li>
+  <div class="dropdown-content" aria-labelledby="navbarDropdownContainer">
+    <a href="{% url 'service_external:versioncontrol' %}">Version control</a>
+    <a href="{% url 'service_external:filesync' %}">Synchronization</a>
+  </div>
+</div>
 
